--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -8,6 +8,7 @@
 <body>
 <h1>IR Notification Test</h1>
 
+
 <form id="irForm">
   <label for="ventureName">Venture Name:</label>
   <input type="text" id="ventureName" name="ventureName" required>
@@ -16,9 +17,20 @@
   <button type="submit">Send IR</button>
 </form>
 
-<p id="responseMessage"></p>
+
+<form id="paymentForm">
+  <label for="investmentId">Investment ID:</label>
+  <input type="text" id="investmentId" name="investmentId" required>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required> <!-- 이메일 입력 필드 추가 -->
+
+
+  <button type="submit">Go to Payment Page</button>
+</form>
 
 <script>
+
   document.getElementById('irForm').addEventListener('submit', async function(event) {
     event.preventDefault();
 
@@ -46,6 +58,20 @@
       responseMessage.textContent = 'IR 요청 실패';
       console.error('Error:', error);
     }
+  });
+
+
+  document.getElementById('paymentForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+
+    const investmentId = document.getElementById('investmentId').value;
+    const email = document.getElementById('email').value; // 이메일 값 가져오기
+
+    // GET 요청으로 URL에 쿼리 파라미터로 추가
+    const url = `/paymentPage?investmentId=${encodeURIComponent(investmentId)}&email=${encodeURIComponent(email)}`;
+
+    // 페이지 이동
+    window.location.href = url;
   });
 </script>
 </body>
